--- a/resume/page.templ
+++ b/resume/page.templ
@@ -164,14 +164,16 @@ templ WorkSection(work []Work) {
 				</div>
 				<h4 class="text-sm font-medium text-gray-600">{ w.Position }</h4>
 				<p class="text-sm text-gray-600 mt-2">{ w.Summary }</p>
-				<div class="mt-2">
-					<h5 class="text-sm font-bold text-gray-800 mb-2">Highlights</h5>
-					<ul class="list-disc pl-4 text-sm text-gray-600">
-						for _, h := range w.Highlights {
-							<li>{ h }</li>
-						}
-					</ul>
-				</div>
+				if len(w.Highlights) > 0 {
+					<div class="mt-2">
+						<h5 class="text-sm font-bold text-gray-800 mb-2">Highlights</h5>
+						<ul class="list-disc pl-4 text-sm text-gray-600">
+							for _, h := range w.Highlights {
+								<li>{ h }</li>
+							}
+						</ul>
+					</div>
+				}
 			</div>
 		}
 	</section>
@@ -190,14 +192,16 @@ templ VolunteerSection(volunteer []Volunteer) {
 				</div>
 				<h4 class="text-sm font-medium text-gray-600">{ v.Position }</h4>
 				<p class="text-sm text-gray-600 mt-2">{ v.Summary }</p>
-				<div class="mt-2">
-					<h5 class="text-sm font-bold text-gray-800 mb-2">Highlights</h5>
-					<ul class="list-disc pl-4 text-sm text-gray-600">
-						for _, h := range v.Highlights {
-							<li>{ h }</li>
-						}
-					</ul>
-				</div>
+				if len(v.Highlights) > 0 {
+					<div class="mt-2">
+						<h5 class="text-sm font-bold text-gray-800 mb-2">Highlights</h5>
+						<ul class="list-disc pl-4 text-sm text-gray-600">
+							for _, h := range v.Highlights {
+								<li>{ h }</li>
+							}
+						</ul>
+					</div>
+				}
 			</div>
 		}
 	</section>
@@ -216,16 +220,20 @@ templ EducationSection(education []Education) {
 				</div>
 				<div class="flex justify-between items-center">
 					<h4 class="text-sm font-medium text-gray-600">{ e.Area }, { e.StudyType }</h4>
-					<span class="text-sm text-gray-600">GPA: { e.Score }</span>
+					if e.Score != "" {
+						<span class="text-sm text-gray-600">GPA: { e.Score }</span>
+					}
 				</div>
-				<div class="mt-2">
-					<h5 class="text-sm font-bold text-gray-800 mb-2">Courses</h5>
-					<ul class="list-disc pl-4 text-sm text-gray-600">
-						for _, c := range e.Courses {
-							<li>{ c }</li>
-						}
-					</ul>
-				</div>
+				if len(e.Courses) > 0 {
+					<div class="mt-2">
+						<h5 class="text-sm font-bold text-gray-800 mb-2">Courses</h5>
+						<ul class="list-disc pl-4 text-sm text-gray-600">
+							for _, c := range e.Courses {
+								<li>{ c }</li>
+							}
+						</ul>
+					</div>
+				}
 			</div>
 		}
 	</section>
@@ -331,13 +339,15 @@ templ ProjectsSection(projects []Project) {
 							</h3>
 							<div class="hidden text-xs underline print:visible"></div>
 							<p class="text-xs text-gray-600">{ p.Description }</p>
-							<div class="flex flex-wrap gap-1 mt-2">
-								for _, keyword := range p.Keywords {
-									<div class="inline-flex items-center rounded-md border px-2 py-0.5 text-xs font-semibold text-nowrap border-gray-300 bg-gray-200 text-gray-800">
-										{ keyword }
-									</div>
-								}
-							</div>
+							if len(p.Keywords) > 0 {
+								<div class="flex flex-wrap gap-1 mt-2">
+									for _, keyword := range p.Keywords {
+										<div class="inline-flex items-center rounded-md border px-2 py-0.5 text-xs font-semibold text-nowrap border-gray-300 bg-gray-200 text-gray-800">
+											{ keyword }
+										</div>
+									}
+								</div>
+							}
 						</div>
 					</div>
 				</div>
