--- a/server/page/page.templ
+++ b/server/page/page.templ
@@ -14,7 +14,7 @@ templ Page() {
 					<div class="flex flex-col space-y-1.5 p-6">
 						<h3 class="font-semibold tracking-tight text-2xl">Upload Resume</h3>
 						<p class="text-sm text-gray-500">
-							Please upload your Resume JSON file below. Make sure the file is in the correct format.
+							Upload your Resume JSON file below.
 						</p>
 					</div>
 					<form action="/resume" method="POST" enctype="multipart/form-data">
@@ -49,7 +49,7 @@ templ Page() {
  								class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-blue-600 text-white hover:bg-blue-700 h-10 px-4 py-2 w-full"
  								type="submit"
 							>
-								Upload File
+								Generate Resume
 							</button>
 						</div>
 					</form>
